<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/suggestFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSuggestElementsBackground">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/citySuggestEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cities_hint"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:textColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressBarSuggest"
        android:visibility="gone"
        style="@style/CircularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSuggestElementsBackground"/>
</LinearLayout>