<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/weatherIcon"
        app:showAsAction="always"
        android:icon="@drawable/thunderstorm"
        android:title="@string/weather_title"/>

    <item
        android:id="@+id/favouriteIcon"
        app:showAsAction="always"
        android:icon="@drawable/ic_cityscape"
        android:title="@string/favourite_title"/>

    <item
        android:id="@+id/settingsIcon"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"/>
</menu>