<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/cityTextView"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HyperCity"/>

    <TextView
        android:id="@+id/countryTextView"
        android:textSize="12sp"
        android:textColor="#a7a7a7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WonderLand"/>

</LinearLayout>