...
    <string name="temperature_navbar" translatable="false">N/A</string>

    <string name="hello_world">Hello, world!</string>

    <string name="hello_blank_fragment">WeatherApp</string>
    <string name="time_schedule_preference_summary">Update weather every</string>
    <string name="moscow">Moscow</string>
    <string name="time_preference_key" translatable="false">time_preference</string>
    <string name="default_time_prefernce_value" translatable="false">15</string>
    <string name="humidity_fmt_string">%.0f%%</string>
    <string name="pressure_fmt_string">%.0f</string>
    <!--<string name="pressure_fmt_string">%.1f mm Hg</string>-->
    <string name="temperature_fmt_string">%.0f°</string>
...
