<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsFragment"
    android:background="@color/colorSettingsBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        style="@style/Settings_card_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/refresh_weather_summary"
            style="@style/Settings_elements_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/refresh_weather_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/refresh_weather_spinner"
            style="@style/Settings_elements_style"
            android:layout_marginEnd="0dp"
            android:entries="@array/time_schedule_preference_entries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/refresh_weather_summary"/>
    </android.support.constraint.ConstraintLayout>



        <Button
            style="@style/Settings_about_button_style"
            android:id="@+id/aboutButton"
            android:text="@string/about_button"
            android:onClick="onClickAbout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>