...
    android:layout_height="wrap_content"
    android:id="@+id/swipetoRefreshLayout"
    android:background="@drawable/gradient_night"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

                android:id="@+id/weatherFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
...
