...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/aboutFragment"
    android:background="#ffffff">

    <ImageView
        android:contentDescription="@string/weather_title"
        android:id="@+id/animated_parrot"
        android:background="@drawable/parrot"
...
